--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <section id="background-d" class="desktop"></section>
         <section id="background-m" class="mobile"></section>
 
-        <section id="home-d" class="desktop"><a href="main.html">BACK TO HOMEPAGE</a></section>
-        <section id="home-m" class="mobile"><a href="main.html">BACK TO HOMEPAGE</a></section>
+        <section id="home-d" class="desktop"><a href="index.html">BACK TO HOMEPAGE</a></section>
+        <section id="home-m" class="mobile"><a href="index.html">BACK TO HOMEPAGE</a></section>
 
         <section id="watermark-d" class="desktop">created by EekSapi - devChallenges.io</section>
         <section id="watermark-m" class="mobile">created by EekSapi - devChallenges.io</section>        
